--- a/Task1/StatisticsViewController.xib
+++ b/Task1/StatisticsViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6254"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StatisticsViewController">
@@ -15,13 +15,18 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="qVN-be-xz9" customClass="CPTGraphHostingView">
-                    <rect key="frame" x="0.0" y="61" width="320" height="507"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="qVN-be-xz9" customClass="CPTGraphHostingView">
+                    <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="qVN-be-xz9" secondAttribute="trailing" id="6xA-bF-MGn"/>
+                <constraint firstAttribute="bottom" secondItem="qVN-be-xz9" secondAttribute="bottom" id="mav-hY-RpB"/>
+                <constraint firstItem="qVN-be-xz9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="oly-IP-RqW"/>
+                <constraint firstItem="qVN-be-xz9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="v9f-5o-ywe"/>
+            </constraints>
             <point key="canvasLocation" x="118" y="395"/>
         </view>
     </objects>
